--- a/_data/global.yml
+++ b/_data/global.yml
@@ -9,7 +9,7 @@ nav: "true"
 footer_text: '© 2016 Charles Leverington'
 twitter: 'c_leverington'
 github: 'cleverington'
-medium: 'https://cleverington.gitbooks.io/n00b-drupal-development/content/index.html'
+medium: 'cleverington.gitbooks.io/n00b-drupal-development/content/index.html'
 
 # Admin Settings
 admin_name: 'Chareles Leverington'
