--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: charles.leverington@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   * If it can be written, it is known.
   * If it is known, it is reproducible.
-  * If it isn't documented, it doesn't exist.
+  If it isn't documented, it doesn't exist.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://cleverington.github.io/" # the base hostname & protocol for your site
 twitter_username: c_leverington
