--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://cleverington.github.io/" # the base hostname & protocol for your site
 twitter_username: c_leverington
 github_username:  cleverington
+drupal_username: cleverington
 
 # Build settings
 markdown: kramdown
