Testing scss Jekyll compiling on GitHub.

--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,7 @@ drupal_username: cleverington
 # Build settings
 markdown: kramdown
 theme: jekyll-theme-modernist
+
+sass:
+  sass_dir: _sass
+  style: compressed
