--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,11 @@
 title: Charles Leverington
 email: charles.leverington@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  * If it can be written, it is known.
-  * If it is known, it is reproducible.
-  If it isn't documented, it doesn't exist.
+  <ul>
+    <li>If it can be written, it is known.</li>
+    <li>If it is known, it is reproducible.</li>
+    <li>If it isn't documented, it doesn't exist.</li>
+  </ul>
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://cleverington.github.io/" # the base hostname & protocol for your site
 twitter_username: c_leverington
